--- a/sf_funcs_demo.ipynb
+++ b/sf_funcs_demo.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
     "import matplotlib.pyplot as plt\n",
     "import statsmodels.api as sm\n",
     "import ts_dashboard_utils as ts\n",
-    "import utils as utils  # copied directly from Reynolds project, normalize() added\n",
-    "import sf_funcs as sf\n",
+    "import src.utils as utils  # copied directly from Reynolds project, normalize() added\n",
+    "import src.sf_funcs as sf\n",
     "import pickle\n",
     "\n",
     "plt.rcParams.update({\"font.size\": 12})\n",
@@ -474,7 +474,7 @@
     ")\n",
     "print(\n",
     "    f\"Number of test intervals: {len(good_inputs_test)} x {len(bad_inputs_test[0])} = {len(good_inputs_test)*len(bad_inputs_test[0])}\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -518,7 +518,7 @@
     "    n_versions_to_plot,\n",
     "    False,\n",
     ")\n",
-    "# plt.savefig(\"plots_local/psp_missing_effect.png\")\n"
+    "# plt.savefig(\"plots_local/psp_missing_effect.png\")"
    ]
   },
   {
@@ -559,7 +559,7 @@
     "    False,\n",
     "    # \"sosf\",\n",
     ")\n",
-    "# plt.savefig(\"plots/psp_missing_effect_lint.png\")\n"
+    "# plt.savefig(\"plots/psp_missing_effect_lint.png\")"
    ]
   },
   {
@@ -589,7 +589,7 @@
     "bad_outputs_train_df = concat_dfs(bad_outputs_train)\n",
     "interp_outputs_train_df = concat_dfs(interp_outputs_train)\n",
     "bad_outputs_test_df = concat_dfs(bad_outputs_test)\n",
-    "interp_outputs_test_df = concat_dfs(interp_outputs_test)\n"
+    "interp_outputs_test_df = concat_dfs(interp_outputs_test)"
    ]
   },
   {
@@ -1058,7 +1058,7 @@
     "plt.title(\"Distribution of missing proportion and lag\")\n",
     "ax.set_facecolor(\"black\")\n",
     "ax.set_xscale(\"log\")\n",
-    "# plt.savefig(f\"plots/psp_correction_heatmap_{n_bins}_bins.png\")\n"
+    "# plt.savefig(f\"plots/psp_correction_heatmap_{n_bins}_bins.png\")"
    ]
   },
   {
@@ -1148,7 +1148,7 @@
    "source": [
     "interp_outputs_test_df = sf.compute_scaling(\n",
     "    interp_outputs_test_df, missing_measure, lookup_table\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -1159,7 +1159,7 @@
    "source": [
     "interp_outputs_test_df = sf.compute_scaling_3d(\n",
     "    interp_outputs_test_df, missing_measure, lookup_table_3d\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -1214,7 +1214,7 @@
     "    \"Mean MAPE of corrected (3D) interpolated intervals test set = {:.2f}\".format(\n",
     "        np.mean(np.abs(error_percents_3d))\n",
     "    )\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -1263,7 +1263,7 @@
     "plt.semilogx()\n",
     "plt.semilogy()\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1297,7 +1297,7 @@
     ")\n",
     "# Extract the unique second-level indexes\n",
     "for i in versions_ordered_sparsity:\n",
-    "    print(i)\n"
+    "    print(i)"
    ]
   },
   {
@@ -1463,7 +1463,7 @@
     "axs[0, 0].set_title(\"Extracting correction factor\")\n",
     "axs[n_versions_to_plot - 1, 0].set_xlabel(\"Lag ($\\\\tau$)\")\n",
     "axs[n_versions_to_plot - 1, 1].set_xlabel(\"Lag ($\\\\tau$)\")\n",
-    "fig.suptitle(\"Applying correction factor to interpolated SFs in test set\", size=16)\n"
+    "fig.suptitle(\"Applying correction factor to interpolated SFs in test set\", size=16)"
    ]
   },
   {
@@ -1537,7 +1537,7 @@
     "        ax[i].set_yticklabels([])\n",
     "        ax[i].set_ylabel(\"\")\n",
     "ax[0].set_ylabel(\"Missing proportion\")\n",
-    "# plt.savefig(\"psp_heatmap_3d_power.png\")\n"
+    "# plt.savefig(\"psp_heatmap_3d_power.png\")"
    ]
   },
   {
@@ -1654,7 +1654,7 @@
     "        ax[i].set_yticklabels([])\n",
     "        ax[i].set_ylabel(\"\")\n",
     "ax[0].set_ylabel(\"Power\")\n",
-    "# plt.savefig(\"psp_heatmap_3d_missing.png\")\n"
+    "# plt.savefig(\"psp_heatmap_3d_missing.png\")"
    ]
   }
  ],
